<resources>
    <string name="app_name">Beauty Advisor</string>
    <!-- Activity's Titles -->
    <string name="title_activity_main">Beauty Advisor</string>
    <string name="title_activity_bp_main">Beauty Promotor</string>
    <string name="title_activity_bpl_main">Beauty Promotor Leader</string>
    <string name="title_activity_sales">Sales</string>
    <string name="title_activity_test">Tes</string>
    <string name="title_activity_sales_history">Riwayat Sales</string>
    <string name="title_activity_test_history">Riwayat Tes</string>
    <string name="title_activity_profile">Profil</string>
    <string name="title_activity_change_password">Ganti Sandi</string>
    <string name="title_activity_questionnnaire">Kuesioner</string>
    <string name="title_activity_picture">Gambar</string>
    <string name="title_activity_pin_point_event">Select Event Location</string>
    <string name="title_activity_create_event">Create Event</string>
    <string name="title_activity_riwayat_pelanggan">Riwayat Pelanggan</string>
    <string name="title_activity_input_pelanggan">Input Pelanggan</string>

    <string name="action_settings">Settings</string>
    <string name="action_logout">Keluar</string>
    <string name="action_profile">Profil</string>
    <string name="action_change_password">Ganti Sandi</string>
    <string name="action_apply">Terapkan</string>
    <string name="action_search">Search</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="prompt_nip">NIP (9 Digit)</string>
    <string name="prompt_name">Nama</string>
    <string name="prompt_full_name">Nama Lengkap</string>
    <string name="prompt_address">Alamat</string>
    <string name="prompt_location_name">Lokasi</string>
    <string name="prompt_province">Provinsi</string>
    <string name="prompt_city">Kota</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_mobile_number">Nomor HP</string>
    <string name="prompt_date_of_birth">Tanggal Lahir</string>
    <string name="prompt_first_date_work">Tanggal Mulai Kerja</string>
    <string name="prompt_position">Posisi</string>

    <string name="prompt_password">Sandi</string>
    <string name="prompt_jumlah">Jumlah</string>
    <string name="prompt_selengkapnya">Selengkapnya</string>
    <string name="prompt_deskripsi">Deskripsi</string>
    <string name="prompt_judul">Judul</string>
    <string name="prompt_notif">Notif</string>
    <string name="prompt_tes">Tes</string>
    <string name="prompt_sales">Sales</string>
    <string name="prompt_tanggal">Tanggal</string>
    <string name="prompt_riwayat_tes">Riwayat Tes</string>
    <string name="prompt_soal">Soal</string>
    <string name="prompt_pilihan">Pilihan</string>
    <string name="prompt_selesai">Selesai</string>
    <string name="prompt_nomor">Nomor. </string>
    <string name="prompt_riwayat_sales">Riwayat sales</string>
    <string name="prompt_input_sales">Input sales</string>
    <string name="prompt_konfirmasi">Konfirmasi</string>
    <string name="prompt_qty">Qty</string>
    <string name="prompt_singkatnya">Singakatnya</string>
    <string name="prompt_filter">Filter</string>
    <string name="prompt_text">Text</string>
    <string name="prompt_nilai">Nilai</string>
    <string name="prompt_indicator">Indikator</string>
    <string name="prompt_save">Save</string>
    <string name="prompt_simpan">Simpan</string>
    <string name="prompt_pelanggan">Pelanggan</string>
    <string name="prompt_add">Tambahkan</string>
    <string name="prompt_info">Info</string>
    <string name="prompt_event">Event</string>

    <string name="placeholder_average">77.7</string>
    <string name="placeholder_rank">0</string>"
    <string name="placeholder_sum_test_taken">20</string>
    <string name="placeholder_count_by_month">0</string>
    <string name="placeholder_count">0</string>
    <string name="placeholder_date">22</string>
    <string name="placeholder_month_year">May, 2010</string>
    <string name="placeholder_qty">0</string>
    <string name="placeholder_sales_input_date">Wednesday, 10 May 2017</string>
    <string name="placeholder_filter">10/10/2017 - 12/10/2017</string>
    <string name="placeholder_test_value">100</string>
    <string name="placeholder_event_name">Judul</string>
    <string name="placeholder_location">Lokasi</string>
    <string name="placeholder_people">Anggota</string>
    <string name="placeholder_event_category">Kategori</string>
    <string name="placeholder_value_zero">0</string>
    <string name="hint_nominal">Nominal</string>

    <string name="title_average">Rata-rata</string>
    <string name="title_rank">Peringkat</string>
    <string name="title_correct_rate">Keberhasilan</string>
    <string name="title_count_by_month">Count (Month)</string>
    <string name="title_count">Count</string>
    <string name="title_sales">Penjualan</string>
    <string name="title_this_month">Bulan Ini</string>
    <string name="title_total_sales">Total Penjualan</string>
    <string name="title_total">Keseluruhan</string>
    <string name="title_sales_average">Rata-rata Penjualan</string>
    <string name="title_month">(Bulan)</string>
    <string name="title_all">(Semua)</string>
    <string name="title_highest_per_month">Tertinggi (Bulan)</string>
    <string name="title_highest">Tertinggi</string>
    <string name="title_sum_test_taken">Pengambilan Tes</string>
    <string name="title_loading">Loading</string>
    <string name="title_warning">Perhatian</string>
    <string name="title_retrieving_data">Mengambil data...</string>
    <string name="title_submitting_answers">Mengirimkan jawaban...</string>
    <string name="title_answer_all_questions">Semua soal harus di isi.</string>
    <string name="title_sales_history">Riwayat Sales</string>
    <string name="title_riwayat_pelanggan">Riwayat Pelanggan</string>
    <string name="title_test_history">Riwayat Tes</string>
    <string name="title_penjualan">Penjualan</string>
    <string name="title_logging_in">Mengidentifikasi...</string>
    <string name="title_jumlah_soal">Jumlah soal: %1$s</string>
    <string name="title_sales_product_highlight">Produk Highlight</string>
    <string name="title_sales_amount">Jumlah Penjualan</string>
    <string name="title_ip_address">IP Address</string>
    <string name="title_cur_password">Sandi Sekarang</string>
    <string name="title_new_password">Sandi Baru</string>
    <string name="title_confirm_new_password">Ulang Sandi Baru</string>
    <string name="title_processing">Pemrosesan</string>
    <string name="title_active">Aktif</string>
    <string name="title_non_active">Berakhir: %1$s</string>
    <string name="title_today">Today</string>
    <string name="title_sales_pcs">Jmlh barang</string>
    <string name="title_sales_visitor">Jmlh pengunjung</string>
    <string name="title_sales_bill">Jmlh nota</string>
    <string name="title_sales_once_a_day_content">Konten 1x isi per hari</string>

    <string name="message_common_cancel">Semua data akan hilang jika Anda kembali. Apakah Anda yakin?</string>
    <string name="message_test_required">Anda belum mengisi test pada %1$s</string>
    <string name="message_test_has_taken">Selamat!\nAnda telah menyelesaikan test hari ini.</string>
    <string name="message_test_no_more">Selamat!\nAnda telah mengerjakan semua test yang ada.</string>
    <string name="message_test_cancel">Silahkan mengisi tes.</string>
    <string name="message_sales_input_required">Anda belum mengisi data penjualan pada %1$s</string>
    <string name="message_sales_input_cancel">Silahkan mengisi data penjualan.</string>
    <string name="message_questioner_invalid">Semua pertanyaan harus di rate.</string>
    <string name="message_questioner_cancel">Silahkan rate semua pertanyaan yang diberikan.</string>
    <string name="message_retrofit_failed">Silahkan cek koneksi internet Anda atau tunggu sebentar dan coba lagi.</string>
    <string name="message_questioner_send">Mengirimkan data...</string>
    <string name="message_questioner_required">Anda belum mengisi kuesioner pada %1$s</string>
    <string name="message_sales_input_send">Mengirimkan data penjualan...</string>
    <string name="message_sales_input_today_done">Selamat!\nAnda telah mengisi data penjualan hari ini.</string>
    <string name="message_test_confirmation">Apakah anda yakin sudah selesai mengerjakan tes?</string>
    <string name="message_sales_input_confirmation">Apakah anda yakin sudah selesai mengisi penjualan hari ini?</string>
    <string name="message_sales_edit_confirmation">Apakah anda yakin untuk mengubah data penjualan?</string>
    <string name="message_empty">Data kosong</string>
    <string name="message_empty_notification">Tidak ada notifikasi</string>
    <string name="message_sales_input_zero">*Anda dapat memasukkan jumlah 0 jika tidak ada penjualan.</string>
    <string name="message_empty_search">Hasil Pencarian Kosong</string>
    <string name="message_retrofit_error">Server sedang dalam perbaikan atau ada gangguan. Silahkan coba beberapa saat lagi.</string>
    <string name="message_change_password_confirmation">Apakah Anda yakin untuk mengganti kata sandi?</string>
    <string name="message_change_password_success">Anda telah berhasil mengganti kada sandi</string>
    <string name="message_change_password_invalid">Password salah. Silahkan isi kembali.</string>
    <string name="message_login_invaled">User atau password salah. Silahkan cek kembali dan coba lagi.</string>

    <string name="action_sign_in">Masuk</string>
    <string name="action_submit">Submit</string>
    <string name="action_iya">Iya</string>
    <string name="action_tidak">Tidak</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_input_sales">Input Sales</string>
    <string name="action_mulai_tes">Mulai Tes</string>
    <string name="action_start_test">Memulai Tes</string>
    <string name="action_isi_questionnnaire">Isi Kuesioner</string>
    <string name="action_cancel">Batal</string>
    <string name="action_ok">Ok</string>
    <string name="action_reset">Reset</string>
    <string name="action_close">Tutup</string>
    <string name="action_input_pelanggan">Input Pelanggan</string>

    <string name="error_invalid_password">Sandi tidak valid.</string>
    <string name="error_password_too_short">Sandi harus > 4 karakter</string>
    <string name="error_password_do_not_match">Sandi baru tidak cocok</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">Field harus di isi.</string>
    <string name="error_field_negative">Nilai harus >= 0</string>
    <string name="error_field_invalid">Field tidak valid.</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Calendar -->
    <string name="title_activity_calendar">Wardah Calendar</string>
    <string name="calendar_item_new_count">%d条</string>
    <string-array name="week">
        <item>Sun</item>
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
    </string-array>
</resources>
