<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:layout_marginLeft="@dimen/test_horizontal_margin"
    android:layout_marginRight="@dimen/test_horizontal_margin"
    android:orientation="horizontal">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        card_view:cardCornerRadius="0dp"
        card_view:cardElevation="1dp"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="20dp">

            <TextView
                android:id="@+id/tv_score"
                style="@style/WBA.TextView.Score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_marginRight="5dp"
                android:minWidth="50dp"
                android:text="@string/placeholder_test_value"
                android:textColor="@color/colorAccent" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:paddingTop="5dp">

                <TextView
                    android:id="@+id/tv_title"
                    style="@style/WBA.TextView.TitleTest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/prompt_judul"
                    android:textColor="@color/colorPrimary" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="2dp" />

                <TextView
                    android:id="@+id/tv_description"
                    style="@style/WBA.TextView.Description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/prompt_deskripsi" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/placeholder_date"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_month_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/placeholder_month_year"
                    android:textSize="8sp" />

            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
