<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/civ_FNI_icon"
            android:layout_width="@dimen/notif_icon_width"
            android:layout_height="@dimen/notif_icon_height"
            android:layout_marginBottom="@dimen/notif_vertical_margin"
            android:layout_marginLeft="@dimen/notif_horizontal_margin"
            android:layout_marginRight="8dp"
            android:layout_marginTop="@dimen/notif_vertical_margin" />

        <TextView
            android:id="@+id/tv_FNI_title"
            style="@style/WBA.TextView.Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="5dp"
            android:text="@string/prompt_judul" />

        <!--<TextView-->
            <!--android:id="@+id/tv_indicator"-->
            <!--style="@style/WBA.TextView.PostedDate"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:paddingRight="10dp"-->
            <!--android:text="@string/prompt_indicator" />-->
    </LinearLayout>

    <ImageView
        android:id="@+id/iv_FNI_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/notif_horizontal_margin"
        android:layout_marginRight="@dimen/notif_horizontal_margin"
        android:layout_marginTop="5dp"
        android:orientation="vertical">

        <at.blogc.android.views.ExpandableTextView
            android:id="@+id/tv_FNI_description"
            style="@style/WBA.TextView.Description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:ellipsize="end"
            android:maxLines="3"
            android:text="@string/prompt_deskripsi"
            app:animation_duration="300" />

        <TextView
            android:id="@+id/tv_FNI_more"
            style="@style/WBA.TextView.More"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/prompt_selengkapnya"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_FNI_date"
            style="@style/WBA.TextView.PostedDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prompt_tanggal" />
    </LinearLayout>
</LinearLayout>
